# referral-cli

./: .env.example  Cargo.toml  README.md  mints.devnet.json  mints.mainnet.json
src/: main.rs  utils.rs
