[package]
name = "referral-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
anyhow = "1"
dotenv = "0.15.0"
clap = { version = "3", features = [ "derive", "env" ] }
referral = { git = "https://github.com/GooseFX1/referral.git", branch = "patch", features = ["cpi"] }
serde_json = "1.0"
solana-client = "1.18"
solana-sdk = "1.18"
tokio = { version = "1", features = ["macros"] }